I guess it works

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <div class="my-5" id="content">
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>Joshua Rodriguez studies genomic sciences at the biotecnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programing. He does not know how to change the image.</p>
+            <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He does not know how to change the image.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
@@ -106,7 +106,7 @@
             <div class="p pt-4 px-5">
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>Joshua Rodriguez studies genomic sciences at the biotecnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programing. He does not know how to change the image.</p>
+              <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He does not know how to change the image.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
