--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
-            <p><strong>UNAM Biotechnology Institute</strong> | Cuernavaca, Mor</p>
+            <p><strong>UNAM Biotechnology Institute</strong> | Cuernavaca, Mo</p>
             <p>Bachelor degree in genomic sciences | September 2009 - Present</p>
             </div>
             <div id="experience" class="section level2">
@@ -110,7 +110,7 @@
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
-              <p><strong>UNAM Biotechnology Institute</strong> | Cuernavaca, Mor</p>
+              <p><strong>UNAM Biotechnology Institute</strong> | Cuernavaca, Mo</p>
               <p>Bachelor degree in genomic sciences | September 2009 - Present</p>
               </div>
               <div id="experience" class="section level2">
