--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="d-flex flex-column col-5 align-items-center text-center align-self-center">
           <div class="mx-auto text-center">
             <div class="p-3">
-              <img src=frank.jpg style="height:15rem" class="rounded">
+              <img src=aragorn.jpg style="height:15rem" class="rounded">
             </div>
             <div class="p-2">
               <h1>Joshua Rodriguez</h1>
@@ -59,7 +59,7 @@
           <div class="my-5" id="content">
             <div id="bio" class="section level2">
             <h2>Bio</h2>
-            <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He does not know how to change the image..</p>
+            <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He hates taking photos of himself, but loves his cat.</p>
             </div>
             <div id="education" class="section level2">
             <h2>Education</h2>
@@ -80,7 +80,7 @@
         <div class="d-flex flex-col">
           <div class="mx-auto">
             <div class="p-3 mt-3 text-center">
-              <img src=frank.jpg style="height:15rem" class="rounded">
+              <img src=aragorn.jpg style="height:15rem" class="rounded">
             </div>
             <div class="p-2 text-center">
               <h1>Joshua Rodriguez</h1>
@@ -106,7 +106,7 @@
             <div class="p pt-4 px-5">
               <div id="bio" class="section level2">
               <h2>Bio</h2>
-              <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He does not know how to change the image..</p>
+              <p>Joshua Rodriguez studies genomic sciences at the biotechnology institute. He doesn’t really know what he would like to do with his life but he loves biology and programming. He hates taking photos of himself, but loves his cat.</p>
               </div>
               <div id="education" class="section level2">
               <h2>Education</h2>
